# ProjectM1PathTracing

./: CMakeLists.txt  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Makefile  PROFILING.md  README.md  README_PROFILING_X86.md  benchmark_chunks.py  benchmark_chunks_valgrind.py  benchmark_strong_scaling.py  benchmark_weak_scaling.py  benchmark_weak_scaling_samples.py  compare_images.py  convert_ppm.py  docker_profiling_guide.md  inputs.txt  inter_profilling.md  plot_errors.py  plot_time.py  profiling.bat  profiling.sh  render.py  render_config.py  run_benchmarks.sh  run_sampling.sh  strong_scaling.py  temps-sampling.txt  valgrind_analysis.sh  weak_scaling_samples.py
benchmark_valgrind_results/: valgrind_benchmark_results.csv
benchmarks/: results.txt
benchmarks_chunks/: chunk_benchmark_results.csv
benchmarks_chunks_valgrind/: valgrind_benchmark_results.csv
benchmarks_sampling_MLT/: MLTRenderTime.txt  outputmlt10.ppm  outputmlt100.ppm  outputmlt20.ppm  outputmlt30.ppm  outputmlt40.ppm  outputmlt50.ppm  outputmlt60.ppm  outputmlt70.ppm  outputmlt80.ppm  outputmlt90.ppm  outputmltref.ppm
benchmarks_sampling_PT/: output100-400-300.ppm  output100.ppm  output1000-400-300.ppm  output200-400-300.ppm  output20000.ppm  output300-400-300.ppm  output400-400-300.ppm  output500-400-300.ppm  output600-400-300.ppm  output700-400-300.ppm  output800-400-300.ppm  output900-400-300.ppm  renderTime
benchmarks_strong_scaling/: strong_scaling_results.txt
benchmarks_weak_scaling/: results_threads_16.txt  weak_scaling_results.txt
benchmarks_weak_scaling_samples/: weak_scaling_samples_results.txt
image/rendering/: antialiasing.ppm
images/: output.ppm  output4.ppm  output5.ppm  rendu100-400-300.ppm  rendu1000-400-300.ppm  rendu10000-400-300.ppm  rendu200-400-300.ppm  rendu20000-400-300.ppm  rendu300-400-300.ppm  rendu400-400-300.ppm  rendu500-400-300.ppm  rendu600-400-300.ppm  rendu700-400-300.ppm  rendu800-400-300.ppm  rendu900-400-300.ppm
output/: output1.ppm  output15.ppm  output16.ppm  output2.ppm  output3.ppm  output4.ppm  output5.ppm  output6.ppm  profiling_para_mac.txt
perf_measure/: README.md  benchmark_speedup.sh  generate_plots.py
ppm_writer/: Makefile  ppm_writer.c  ppm_writer.cpp  ppm_writer.h  test  test.c  test_slow.c
ppm_writer/test_profiling.dSYM/Contents/: Info.plist
ppm_writer/test_profiling.dSYM/Contents/Resources/DWARF/: test_profiling
ppm_writer/test_profiling.dSYM/Contents/Resources/Relocations/aarch64/: test_profiling.yml
profiling_results/: gmon.out  profile_report.txt
shapes/: AABB.cpp  AABB.h  cube.cpp  cube.h  object.cpp  object.h  sphere.cpp  sphere.h
src/: AABB.cpp  AABB.h  Dielectric.cpp  Dielectric.h  Emissive.cpp  Emissive.h  Lambertian.cpp  Lambertian.h  Metallic.cpp  Metallic.h  a.out  camara.cpp  camara.h  camera.cpp  camera.h  color.h  cuda_compat.h  dielectric.cpp  dielectric.h  emissive.cpp  emissive.h  entity.cpp  entity.h  firstCollision.cpp  firstCollision.h  glossy.cpp  glossy.h  hitInfo.h  hitrecord.h  hitting.h  image.ppm  lambertian.cpp  lambertian.h  main.cpp  material.h  mlt_path.cpp  mlt_path.h  obj.h  position.cpp  position.h  (+22 more)
test/: input_strong_scaling.txt  strong_scaling.py  test_render.sh  test_render_pixel.sh  test_strong_scaling_MLT.sh
